--- a/YLMES/Views/ProductionPlanning/txt.cshtml
+++ b/YLMES/Views/ProductionPlanning/txt.cshtml
@@ -42,13 +42,14 @@
         </tr>
         <tr>
             <td>数量:</td>
-            <td colspan="2" style="text-align:left;">@ViewData["qty"]</td>
+            <td colspan="2" style="text-align:center;">@ViewData["qty"]</td>
             <td colspan="1" style="text-align:center;vertical-align: middle;">单位:</td>
-            <td colspan="1" style="text-align:left">@ViewData["unit"]</td>
+            <td colspan="1" style="text-align:center">@ViewData["unit"]</td>
         </tr>
         <tr>
             <td>包装条码:</td>
-            <td colspan="4" style="text-align:left">@ViewData["PackageName"]</td>
+            <td colspan="3" style="text-align:center">@ViewData["PackageName"]</td>
+            <td colspan="1" style="text-align:center;">@ViewData["note"]</td>
         </tr>
     </table>
 </body>
