--- a/YLMES/Views/Home/left.cshtml
+++ b/YLMES/Views/Home/left.cshtml
@@ -57,6 +57,9 @@
                                         case "仓库设置":
                                             $('#systemsetup').append(' <li><cite></cite><a href="#">仓库设置</a><i hidden="hidden">/Warehouse/Warehousesetup</i></li>');
                                             break;
+                                        case "机器配置":
+                                            $('#systemsetup').append(' <li><cite></cite><a href="#">机器配置</a><i hidden="hidden">/SystemSettings/MachineConfig</i></li>');
+                                            break;
                                     }
                                     break;
                                 case "销售管理":
